--- a/appsettings.json
+++ b/appsettings.json
@@ -8,12 +8,13 @@
   },
   "AllowedHosts": "*",
   "DBConnection": {
-    "Host": "10.23.196.52",
+    "Host": "192.168.56.104",
     "Port": "5432",
     "Database": "mtsbase",
     "UserName": "mts",
-    "Password": "dfaf@we jkjcld!",
+    "Password": "test$ope$_1",
     "sslmode": "Prefer",
-    "Trust Server Certificate": "true"
+    "Trust Server Certificate": "true",
+    "Reconnect": "20000"
   }
 }
