--- a/appsettings.json
+++ b/appsettings.json
@@ -8,12 +8,22 @@
   },
   "AllowedHosts": "*",
   "DBConnection": {
-    "Host": "192.168.56.104",
+    "Host": "10.23.196.52",
     "Port": "5432",
     "Database": "mtsbase",
     "UserName": "mts",
-    "Password": "test$ope$_1",
-    "sslmode": "Prefer",
+    "Password": "dfaf@we jkjcld!",
+    "SslMode": "Prefer",
+    "Trust Server Certificate": "true",
+    "Reconnect": "5000"
+  },
+  "DBTest": {
+    "Host": "10.23.196.58",
+    "Port": "5432",
+    "Database": "mtsbase",
+    "UserName": "mts",
+    "Password": "dfaf@we jkjcld!",
+    "SslMode": "Prefer",
     "Trust Server Certificate": "true",
     "Reconnect": "5000"
   }
