--- a/appsettings.json
+++ b/appsettings.json
@@ -14,8 +14,9 @@
     "UserName": "mts",
     "Password": "dfaf@we jkjcld!",
     "SslMode": "Prefer",
-    "Trust Server Certificate": "true",
-    "Reconnect": "5000"
+    "TrustServerCertificate": "true",
+    "Reconnect": "5000",
+    "Timeout": "5000"
   },
   "DBTest": {
     "Host": "10.23.196.58",
@@ -24,7 +25,8 @@
     "UserName": "mts",
     "Password": "dfaf@we jkjcld!",
     "SslMode": "Prefer",
-    "Trust Server Certificate": "true",
-    "Reconnect": "5000"
+    "TrustServerCertificate": "true",
+    "Reconnect": "5000",
+    "Timeout": "5000"
   }
 }
