Edit command timeouts and add blocking buttons for moving melts in order

--- a/NLog.config
+++ b/NLog.config
@@ -12,7 +12,7 @@
     <target xsi:type="File" name="file" fileName="${basedir}/logs/${shortdate}.log"
             layout="[${date:format=dd.MM.yyyy HH\:mm\:ss.fff}] [${uppercase:${level}} ${logger}]: ${message}"
             archiveFileName = "${basedir}/logs/archives/${shortdate}.zip"
-            archiveEvery = "Day"
+            archiveEvery = "Week"
             enableArchiveFileCompression = "true"
             maxArchiveFiles = "20"
             archiveAboveSize = "104857600" />
