--- a/OvenLanding.csproj
+++ b/OvenLanding.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="NLog" Version="4.7.5" />
-      <PackageReference Include="Npgsql" Version="5.0.0-preview1" />
+      <PackageReference Include="NLog" Version="4.7.7" />
+      <PackageReference Include="Npgsql" Version="5.0.3" />
     </ItemGroup>
 
 </Project>
