--- a/appsettings.json
+++ b/appsettings.json
@@ -8,22 +8,22 @@
   },
   "AllowedHosts": "*",
   "DBConnection": {
-    "Host": "10.23.196.52",
+    "Host": "192.168.56.104",
     "Port": "5432",
-    "Database": "mtsbase",
+    "Database": "mtsbase_prod",
     "UserName": "mts",
-    "Password": "dfaf@we jkjcld!",
+    "Password": "test$ope$_1",
     "SslMode": "Prefer",
     "TrustServerCertificate": "true",
     "Reconnect": "5000",
     "Timeout": "5000"
   },
   "DBTest": {
-    "Host": "10.23.196.58",
+    "Host": "192.168.56.104",
     "Port": "5432",
-    "Database": "mtsbase",
+    "Database": "mtsbase_test",
     "UserName": "mts",
-    "Password": "dfaf@we jkjcld!",
+    "Password": "test$ope$_1",
     "SslMode": "Prefer",
     "TrustServerCertificate": "true",
     "Reconnect": "5000",
